--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "expo": "~47.0.12",
     "expo-app-loading": "~2.1.1",
     "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.1.4",
     "react-native-reanimated": "~2.12.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "tailwindcss": "^3.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
